--- a/m3-java-capstone/src/main/webapp/css/style.css
+++ b/m3-java-capstone/src/main/webapp/css/style.css
@@ -1,17 +1,17 @@
 header {
 	padding: 0 0 0 10px;
-	background-color: #006ecb;
 	position: relative;
+	height: 164px;
 }
 header img {
 	height: 110px;
 }
 body{
 	margin: 0px;
+	padding: 0 0 0 10px;
 	font-family: arial;
 	position: relative;
 	top: -60px;
-	background-image: url("img/parks/details_bg.png");
 }
 a:link {
 	color: #006ecb;
@@ -29,6 +29,29 @@ a:active{
 	color: #5eca33;
 	text-decoration: none;	
 	color: blue;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 12px 16px;
+    text-decoration: none;
+}
+li a:hover {
+    background-color: #4ba428;
+    color: white;
 }
 .park_image_home{
 	float: left;
@@ -49,44 +72,10 @@ a:active{
 	width: 600px;
 	height: 333px;
 }
-.image_backdrop {
-	background-image: url("img/parks/details_bg.png");
-	background-repeat: repeat-x;
-	width: 105%;
-	height: 341px;
-	margin: 0;
-	padding: 10px;
-	position: relative;
-	left: -10px;
-	top: -10px;
-}
 .main_content{
 	margin: 5px;
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
 
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #4ba428;
-    color: white;
-}
 .copyright{
 	
 	font-style: italic;
