--- a/m3-java-capstone/src/main/webapp/css/style.css
+++ b/m3-java-capstone/src/main/webapp/css/style.css
@@ -211,9 +211,11 @@ hr {
 	padding: 10px;
 }
 .weather_tip{
-	visibility: visible;
 	width: auto;
-	height: 300px;
+	height: 50px;
 	background-color: lightgrey;
 	border-radius: 10px;
+	padding: 5px 10px 5px 10px;
+	display: table-cell;
+    vertical-align: middle;
 }
