--- a/m3-java-capstone/src/main/webapp/css/style.css
+++ b/m3-java-capstone/src/main/webapp/css/style.css
@@ -234,13 +234,19 @@ display:block; text-decoration:none;}
 	display: table-cell;
     vertical-align: middle;
 }
-input{
+input[type=submit]{
 	border: 1.5px solid #006ecb;
 	border-radius: 5px;
 	padding:4px 8px 4px 8px;
 }
-input:hover{
+input[type=submit]:hover{
 	box-shadow: 1px 1px 2px green, 0 0 5px green, 0 0 3px green;
 	border: 1.5px solid green;
 	color:green;	
+}
+.survey{
+	padding: 8px;
+	background-color: white;
+	border: thin solid black;
+	border-radius: 5px;
 }
